<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/logout_dialog_shape"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_logout_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_dialog_title"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        >
        <Button
            android:id="@+id/btn_no"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginEnd="@dimen/_15sdp"
            >
        </Button>
        <Button
            android:id="@+id/btn_yes"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            >
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>