<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_300sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_email"
                android:minHeight="@dimen/_48sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="@dimen/_48sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tv_create_new_account"
                android:textColor="@color/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/create_new_account"
                android:fontFamily="@font/lato_bold"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>